--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -52,7 +52,7 @@
             var glitterTranslate = new Object();
             glitterTranslate.paused = "$T('post-Paused')";
             glitterTranslate.left = "$T('Glitter-left')";
-            glitterTranslate.clearWarn = "$T('Glitter-confirmClearWarnings')";
+            glitterTranslate.clearWarn = "$T('confirm')";
             glitterTranslate.pausePromptFail = "$T('Glitter-pausePromptFail')"
             glitterTranslate.pauseFor = "$T('pauseFor')"
             glitterTranslate.minutes = "$T('mins')"
@@ -60,8 +60,9 @@
             glitterTranslate.restart = "$T('explain-Restart') $T('explain-needNewLogin')".replace(/\<br(\s*\/|)\>/g, '\n');
             glitterTranslate.repair = "$T('explain-Repair')".replace(/<br \/>/g, "\n").replace(/&quot;/g,'"');
             glitterTranslate.deleteMsg = "$T('nzo-delete')";
-            glitterTranslate.removeDown = "$T('Glitter-confirmClearDownloads')";
-            glitterTranslate.removeDow1 = "$T('Glitter-confirmClear1Download')";
+            glitterTranslate.removeDown = "$T('confirm')";
+            glitterTranslate.removeDow1 = "$T('confirm')";
+            glitterTranslate.renameAbort = "$T('Glitter-confirmAbortDirectUnpack')\n$T('confirm')";
             glitterTranslate.retryAll = "$T('link-retryAll')?";
             glitterTranslate.fetch = "$T('Glitter-fetch')";
             glitterTranslate.encrypted = "$T('Glitter-encrypted')";
