--- a/interfaces/Plush/templates/history.tmpl
+++ b/interfaces/Plush/templates/history.tmpl
@@ -14,7 +14,7 @@
 
 </script>
 
-<!--#if $limit > 1 or $search#-->
+<!--#if $limit > 1 #-->
 <table class="queueTable" id="historyTable" cellspacing="0">
 <!--#set $cur = 0#-->
 <!--#for $line in $lines #-->
