Additional cleanup of interface.py functions

--- a/interfaces/Plush/templates/_inc_modals.tmpl
+++ b/interfaces/Plush/templates/_inc_modals.tmpl
@@ -33,10 +33,8 @@
   </div>
 
   <div id="plush_options_modal">
-
-  <p><a href="status/disconnect?apikey=$apikey" class="juiButton">$T('link-forceDisc')</a></p>
-  <p><a href="config/restart?apikey=$apikey" class="juiButton" id="sabnzbd_restart" rel="#echo $T('explain-Restart').replace("<br />","\n")#">$T('sch-restart')</a>
-    <a href="shutdown?apikey=$apikey&amp;pid=$pid" class="juiButton" id="sabnzbd_shutdown" rel="$T('shutdownOK?')">$T('sch-shutdown')</a></p>
+    <p>Go to Config - General to restart.</p>
+    <p><a href="shutdown?apikey=$apikey&amp;pid=$pid" class="juiButton" id="sabnzbd_shutdown" rel="$T('shutdownOK?')">$T('sch-shutdown')</a></p>
   <br/>
 
   $T('Plush-refreshRate'):
