--- a/interfaces/Config/templates/config_notify.tmpl
+++ b/interfaces/Config/templates/config_notify.tmpl
@@ -26,7 +26,7 @@
 <!--#end def#-->
 
 <div class="colmask">
-    <form action="saveEmail" method="post" name="fullform" class="fullform" autocomplete="off">
+    <form action="saveNotify" method="post" name="fullform" class="fullform" autocomplete="off">
     <input type="hidden" id="apikey" name="apikey" value="$apikey" />
     <input type="hidden" id="ajax" name="ajax" value="1" />
     <div class="section" id="email">
@@ -46,9 +46,9 @@
                 <div class="field-pair">
                     <label class="config" for="email_endjob">$T('opt-email_endjob')</label>
                     <select name="email_endjob" id="email_endjob">
-                        <option value="0" <!--#if int($email_endjob) == 0 then 'selected="selected"' else ""#--> >$T('email-never')</option>
-                        <option value="1" <!--#if int($email_endjob) == 1 then 'selected="selected"' else ""#--> >$T('email-always')</option>
-                        <option value="2" <!--#if int($email_endjob) == 2 then 'selected="selected"' else ""#--> >$T('email-errorOnly')</option>
+                        <option value="0" <!--#if int($email_endjob) == "0" then 'selected="selected"' else ""#--> >$T('email-never')</option>
+                        <option value="1" <!--#if int($email_endjob) == "1" then 'selected="selected"' else ""#--> >$T('email-always')</option>
+                        <option value="2" <!--#if int($email_endjob) == "2" then 'selected="selected"' else ""#--> >$T('email-errorOnly')</option>
                     </select>
                 </div>
                 <div class="field-pair">
@@ -238,12 +238,12 @@
                             $T($notify_types[$type]).replace('/', ' / ')
                         </label>
                         <select name="${section_label}_prio_$type" id="${section_label}_prio_$type">
-                            <option value="-3" <!--#if $getVar($section_label + '_prio_' + $type) == -3 then 'selected="selected"' else ""#--> >$T('prowl-off')</option>
-                            <option value="-2" <!--#if $getVar($section_label + '_prio_' + $type) == -2 then 'selected="selected"' else ""#--> >$T('prowl-very-low')</option>
-                            <option value="-1" <!--#if $getVar($section_label + '_prio_' + $type) == -1 then 'selected="selected"' else ""#--> >$T('prowl-moderate')</option>
-                            <option value="0"  <!--#if $getVar($section_label + '_prio_' + $type) == 0  then 'selected="selected"' else ""#--> >$T('prowl-normal')</option>
-                            <option value="1"  <!--#if $getVar($section_label + '_prio_' + $type) == 1  then 'selected="selected"' else ""#--> >$T('prowl-high')</option>
-                            <option value="2"  <!--#if $getVar($section_label + '_prio_' + $type) == 2  then 'selected="selected"' else ""#--> >$T('prowl-emergency')</option>
+                            <option value="-3" <!--#if $getVar($section_label + '_prio_' + $type) == "-3" then 'selected="selected"' else ""#--> >$T('prowl-off')</option>
+                            <option value="-2" <!--#if $getVar($section_label + '_prio_' + $type) == "-2" then 'selected="selected"' else ""#--> >$T('prowl-very-low')</option>
+                            <option value="-1" <!--#if $getVar($section_label + '_prio_' + $type) == "-1" then 'selected="selected"' else ""#--> >$T('prowl-moderate')</option>
+                            <option value="0"  <!--#if $getVar($section_label + '_prio_' + $type) == "0"  then 'selected="selected"' else ""#--> >$T('prowl-normal')</option>
+                            <option value="1"  <!--#if $getVar($section_label + '_prio_' + $type) == "1"  then 'selected="selected"' else ""#--> >$T('prowl-high')</option>
+                            <option value="2"  <!--#if $getVar($section_label + '_prio_' + $type) == "2"  then 'selected="selected"' else ""#--> >$T('prowl-emergency')</option>
                         </select>
                     </div>
                 <!--#end for#-->
@@ -304,12 +304,12 @@
                             $T($notify_types[$type]).replace('/', ' / ')
                         </label>
                         <select name="${section_label}_prio_$type" id="${section_label}_prio_$type">
-                            <option value="-3" <!--#if $getVar($section_label + '_prio_' + $type) == -3 then 'selected="selected"' else ""#--> >$T('pushover-off')</option>
-                            <option value="-2" <!--#if $getVar($section_label + '_prio_' + $type) == -2 then 'selected="selected"' else ""#--> >$T('prowl-very-low')</option>
-                            <option value="-1" <!--#if $getVar($section_label + '_prio_' + $type) == -1 then 'selected="selected"' else ""#--> >$T('pushover-low')</option>
-                            <option value="0"  <!--#if $getVar($section_label + '_prio_' + $type) == 0  then 'selected="selected"' else ""#--> >$T('prowl-normal')</option>
-                            <option value="1"  <!--#if $getVar($section_label + '_prio_' + $type) == 1  then 'selected="selected"' else ""#--> >$T('pushover-high')</option>
-                            <option value="2"  <!--#if $getVar($section_label + '_prio_' + $type) == 2  then 'selected="selected"' else ""#--> >$T('prowl-emergency')</option>
+                            <option value="-3" <!--#if $getVar($section_label + '_prio_' + $type) == "-3" then 'selected="selected"' else ""#--> >$T('pushover-off')</option>
+                            <option value="-2" <!--#if $getVar($section_label + '_prio_' + $type) == "-2" then 'selected="selected"' else ""#--> >$T('prowl-very-low')</option>
+                            <option value="-1" <!--#if $getVar($section_label + '_prio_' + $type) == "-1" then 'selected="selected"' else ""#--> >$T('pushover-low')</option>
+                            <option value="0"  <!--#if $getVar($section_label + '_prio_' + $type) == "0"  then 'selected="selected"' else ""#--> >$T('prowl-normal')</option>
+                            <option value="1"  <!--#if $getVar($section_label + '_prio_' + $type) == "1"  then 'selected="selected"' else ""#--> >$T('pushover-high')</option>
+                            <option value="2"  <!--#if $getVar($section_label + '_prio_' + $type) == "2"  then 'selected="selected"' else ""#--> >$T('prowl-emergency')</option>
                         </select>
                     </div>
                 <!--#end for#-->
