--- a/interfaces/Plush/templates/history.tmpl
+++ b/interfaces/Plush/templates/history.tmpl
@@ -87,11 +87,7 @@
       <!--#end if#-->
     <!--#end for#-->
     <!--#if $line.retry#-->
-      <form action="history/retry_pp" method="post" enctype="multipart/form-data">
-        <input type="hidden" value="$line.nzo_id" name="job" />
-        <input type="hidden" name="apikey" value="$apikey" />
-        &nbsp;<a href="#" class="retry-nzbfile">$T('button-retry')</a>
-      </form>
+      Rertry not supported on Plush
     <!--#end if#-->
     <!--#if $line.action_line#-->
     <h3 class="hvMessageAction">&raquo;&nbsp;$line.action_line&nbsp;</h3>
