--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -545,7 +545,7 @@
         });
 
         \$('.delServer').click(function(){
-            if( confirm("$T('Plush-confirm')") ) {
+            if( confirm("$T('confirm')") ) {
                 \$(this).parents('form:first').attr('action','delServer').submit();
                 // Let us leave!
                 formWasSubmitted = true;
@@ -556,7 +556,7 @@
         });
 
         \$('.clrServer').click(function(){
-            if( confirm("$T('Plush-confirm')") ) {
+            if( confirm("$T('confirm')") ) {
                 \$(this).parents('form:first').attr('action','clrServer').submit();
                 // Let us leave!
                 formWasSubmitted = true;
