Some Config functions were broken due to interface refactor

--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -34,6 +34,7 @@
         <div class="col1">
             <form action="addServer" method="post" autocomplete="off" onsubmit="removeObfuscation();">
                 <input type="hidden" name="apikey" value="$apikey" />
+                <input type="hidden" name="output" value="json" />
                 <fieldset>
                     <div class="field-pair">
                         <label class="config" for="enable">$T('srv-enable')</label>
@@ -139,6 +140,7 @@
     <!--#for $cur, $server in enumerate($servers) #-->
         <form action="saveServer" method="post" class="fullform" autocomplete="off">
             <input type="hidden" name="apikey" value="$apikey" />
+            <input type="hidden" name="output" value="json" />
             <input type="hidden" name="server" value="$server['name']" />
             <input type="hidden" id="ajax" name="ajax" value=1 />
 
@@ -522,7 +524,7 @@
             \$.ajax({
                 type: "POST",
                 url: "../../api",
-                data: "mode=config&output=json&name=test_server&" + \$(this).parents('form:first').serialize()
+                data: "mode=config&name=test_server&" + \$(this).parents('form:first').serialize()
             }).then(function(data) {
                 // Let's replace the link
                 msg = data.value.message.replace('https://sabnzbd.org/certificate-errors', '<a href="https://sabnzbd.org/certificate-errors" class="alert-link" target="_blank">https://sabnzbd.org/certificate-errors</a>')
