--- a/interfaces/Config/templates/config_folders.tmpl
+++ b/interfaces/Config/templates/config_folders.tmpl
@@ -10,6 +10,7 @@
     </div>
     <form action="saveDirectories" method="post" name="fullform" class="fullform" autocomplete="off">
     <input type="hidden" id="apikey" name="apikey" value="$apikey" />
+    <input type="hidden" name="output" value="json" />
     <input type="hidden" id="ajax" name="ajax" value="1" />
     <div class="section">
         <div class="col2">
