--- a/interfaces/Config/templates/config_general.tmpl
+++ b/interfaces/Config/templates/config_general.tmpl
@@ -10,7 +10,8 @@
     </div>
     <form action="saveGeneral" method="post" name="fullform" class="fullform" autocomplete="off">
     <input type="hidden" id="apikey" name="apikey" value="$apikey" />
-    <input type="hidden" id="ajax" name="ajax" value=1 />
+    <input type="hidden" id="ajax" name="ajax" value="1" />
+    <input type="hidden" name="output" value="json" />
     <div class="section">
         <div class="col2">
             <h3>$T('webServer') <a href="$helpuri$help_uri" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
