Open Status Info - Connections when clicking on the speed graph

--- a/interfaces/Glitter/templates/static/stylesheets/glitter.css
+++ b/interfaces/Glitter/templates/static/stylesheets/glitter.css
@@ -23,6 +23,7 @@ h2 {
 .sparkline-container svg {
     margin: 10px 15px 8px;
     float: left;
+    cursor: pointer;
 }
 
 .main-navbar .sparkline {
