address comments, pt. 1

--- a/interfaces/Config/templates/config_sorting.tmpl
+++ b/interfaces/Config/templates/config_sorting.tmpl
@@ -202,7 +202,7 @@
                                 <tr>
                                     <td class="align-right" style="vertical-align:top;"><b>$T('Valid properties')</b></td>
                                     <td colspan=2 style="word-spacing: 0.7em; max-width:275px; white-space: wrap;">
-                                        <!--#for $prop in $guessitProperties#-->
+                                        <!--#for $prop in $guessit_properties#-->
                                         $prop
                                         <!--#end for#-->
                                     </td>
@@ -398,7 +398,7 @@
                                 <tr>
                                     <td class="align-right" style="vertical-align:top;"><b>$T('Valid properties')</b></td>
                                     <td colspan=2 style="word-spacing: 0.7em; max-width:325px; white-space: wrap;">
-                                        <!--#for $prop in $guessitProperties#-->
+                                        <!--#for $prop in $guessit_properties#-->
                                         $prop
                                         <!--#end for#-->
                                     </td>
@@ -598,7 +598,7 @@
                                 <tr>
                                     <td class="align-right" style="vertical-align:top;"><b>$T('Valid properties')</b></td>
                                     <td colspan=2 style="word-spacing: 0.7em; max-width:275px; white-space: wrap;">
-                                        <!--#for $prop in $guessitProperties#-->
+                                        <!--#for $prop in $guessit_properties#-->
                                         $prop
                                         <!--#end for#-->
                                     </td>
