insert linebreak between guessit props under pattern key

--- a/interfaces/Config/templates/config_sorting.tmpl
+++ b/interfaces/Config/templates/config_sorting.tmpl
@@ -201,9 +201,9 @@
                                 </tr>
                                 <tr>
                                     <td class="align-right" style="vertical-align:top;"><b>$T('Valid properties')</b></td>
-                                    <td colspan=2 style="word-spacing: 0.7em; max-width:275px; white-space: wrap;">
+                                    <td colspan=2>
                                         <!--#for $prop in $guessit_properties#-->
-                                        $prop
+                                        $prop<br>
                                         <!--#end for#-->
                                     </td>
                                 </tr>
@@ -397,9 +397,9 @@
                                 </tr>
                                 <tr>
                                     <td class="align-right" style="vertical-align:top;"><b>$T('Valid properties')</b></td>
-                                    <td colspan=2 style="word-spacing: 0.7em; max-width:325px; white-space: wrap;">
+                                    <td colspan=2>
                                         <!--#for $prop in $guessit_properties#-->
-                                        $prop
+                                        $prop<br>
                                         <!--#end for#-->
                                     </td>
                                 </tr>
@@ -597,9 +597,9 @@
                                 </tr>
                                 <tr>
                                     <td class="align-right" style="vertical-align:top;"><b>$T('Valid properties')</b></td>
-                                    <td colspan=2 style="word-spacing: 0.7em; max-width:275px; white-space: wrap;">
+                                    <td colspan=2>
                                         <!--#for $prop in $guessit_properties#-->
-                                        $prop
+                                        $prop<br>
                                         <!--#end for#-->
                                     </td>
                                 </tr>
