--- a/interfaces/Config/templates/config_switches.tmpl
+++ b/interfaces/Config/templates/config_switches.tmpl
@@ -245,7 +245,7 @@
                     <div class="field-pair">
                         <label class="config" for="deobfuscate_final_filenames">$T('opt-deobfuscate_final_filenames')</label>
                         <input type="checkbox" name="deobfuscate_final_filenames" id="deobfuscate_final_filenames" value="1" <!--#if int($deobfuscate_final_filenames) > 0 then 'checked="checked"' else ""#--> />
-                        <span class="desc">$T('explain-deobfuscate_final_filenames')</span>
+                        <span class="desc">$T('explain-deobfuscate_final_filenames') $T('explain-deobfuscate_final_filenames-ext')</span>
                     </div>
                     <div class="field-pair advanced-settings">
                         <label class="config" for="enable_meta">$T('opt-enable_meta')</label>
