--- a/interfaces/Config/templates/config_sorting.tmpl
+++ b/interfaces/Config/templates/config_sorting.tmpl
@@ -96,6 +96,26 @@
                                     <td>$T('show-us-name')</td>
                                 </tr>
                                 <tr>
+                                    <td class="align-right"><b>$T('Resolution'):</b></td>
+                                    <td>%r</td>
+                                    <td>1080p</td>
+                                </tr>
+                                <tr>
+                                    <td class="align-right"><b>$T('year'):</b></td>
+                                    <td>%y</td>
+                                    <td>2021</td>
+                                </tr>
+                                <tr>
+                                    <td class="align-right"><b>$T('decade'):</b></td>
+                                    <td>%decade</td>
+                                    <td>20</td>
+                                </tr>
+                                <tr>
+                                    <td>&nbsp;</td>
+                                    <td>%0decade</td>
+                                    <td>2020</td>
+                                </tr>
+                                <tr>
                                     <td class="align-right"><b>$T('show-seasonNum'):</b></td>
                                     <td>%s</td>
                                     <td>1</td>
@@ -131,11 +151,6 @@
                                     <td>$T('ep-us-name')</td>
                                 </tr>
                                 <tr>
-                                    <td class="align-right"><b>$T('Resolution'):</b></td>
-                                    <td>%r</td>
-                                    <td>1080p</td>
-                                </tr>
-                                <tr>
                                     <td class="align-right"><b>$T('fileExt'):</b></td>
                                     <td>%ext</td>
                                     <td>avi</td>
@@ -154,6 +169,43 @@
                                     <td class="align-right"><b>$T('lowercase'):</b></td>
                                     <td>{$T('TEXT')}</td>
                                     <td>$T('text')</td>
+                                </tr>
+                            </tbody>
+                            <tbody>
+                                <tr>
+                                    <th class="align-right"><b>GuessIt</b></th>
+                                    <th>$T('sort-pattern')</th>
+                                    <th>$T('sort-result')</th>
+                                </tr>
+                            </tbody>
+                            <tbody>
+                                <tr>
+                                    <td class="align-right"><b>$T('sort-guessitMeaning'):</b></td>
+                                    <td>%GI&lt;$T('sort-guessitProperty')&gt;</td>
+                                    <td>$T('guessit-sp-property')</td>
+                                </tr>
+                                <tr>
+                                    <td class="align-right"><b></b></td>
+                                    <td>%G.I&lt;$T('sort-guessitProperty')&gt;</td>
+                                    <td>$T('guessit-dot-property')</td>
+                                </tr>
+                                <tr>
+                                    <td class="align-right"><b></b></td>
+                                    <td>%G_I&lt;$T('sort-guessitProperty')&gt;</td>
+                                    <td>$T('guessit-us-property')</td>
+                                </tr>
+                                <tr>
+                                    <td class="align-right"><b>$T('Example')</b></td>
+                                    <td>%GI&lt;audio_codec&gt;</td>
+                                    <td>DTS</td>
+                                </tr>
+                                <tr>
+                                    <td class="align-right" style="vertical-align:top;"><b>$T('Valid properties')</b></td>
+                                    <td colspan=2>
+                                        <!--#for $prop in $guessit_properties#-->
+                                        $prop<br>
+                                        <!--#end for#-->
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -232,6 +284,21 @@
                             <tbody>
                                 <tr>
                                     <td class="align-right"><b>$T('sort-title'):</b></td>
+                                    <td>%sn</td>
+                                    <td>$T('movie-sp-name') ($T('case-adjusted'))</td>
+                                </tr>
+                                <tr>
+                                    <td>&nbsp;</td>
+                                    <td>%s.n</td>
+                                    <td>$T('movie-dot-name') ($T('case-adjusted'))</td>
+                                </tr>
+                                <tr>
+                                    <td>&nbsp;</td>
+                                    <td>%s_n</td>
+                                    <td>$T('movie-us-name') ($T('case-adjusted'))</td>
+                                </tr>
+                                <tr>
+                                    <td class="align-right"><b>$T('sort-title'):</b></td>
                                     <td>%title</td>
                                     <td>$T('movie-sp-name')</td>
                                 </tr>
@@ -246,29 +313,29 @@
                                     <td>$T('movie-us-name')</td>
                                 </tr>
                                 <tr>
-                                    <td class="align-right"><b>$T('year'):</b></td>
-                                    <td>%y</td>
-                                    <td>2009</td>
-                                </tr>
-                                <tr>
                                     <td class="align-right"><b>$T('Resolution'):</b></td>
                                     <td>%r</td>
                                     <td>1080p</td>
                                 </tr>
                                 <tr>
-                                    <td class="align-right"><b>$T('extension'):</b></td>
-                                    <td>%ext</td>
-                                    <td>avi</td>
+                                    <td class="align-right"><b>$T('year'):</b></td>
+                                    <td>%y</td>
+                                    <td>2021</td>
                                 </tr>
                                 <tr>
                                     <td class="align-right"><b>$T('decade'):</b></td>
                                     <td>%decade</td>
-                                    <td>00</td>
+                                    <td>20</td>
                                 </tr>
                                 <tr>
                                     <td>&nbsp;</td>
                                     <td>%0decade</td>
-                                    <td>2000</td>
+                                    <td>2020</td>
+                                </tr>
+                                <tr>
+                                    <td class="align-right"><b>$T('extension'):</b></td>
+                                    <td>%ext</td>
+                                    <td>avi</td>
                                 </tr>
                                 <tr>
                                     <td class="align-right"><b>$T('orgFilename'):</b></td>
@@ -298,6 +365,43 @@
                                     <td class="align-right"><b>$T('partNumber'):</b></td>
                                     <td>%1</td>
                                     <td>1</td>
+                                </tr>
+                            </tbody>
+                            <tbody>
+                                <tr>
+                                    <th class="align-right"><b>GuessIt</b></th>
+                                    <th>$T('sort-pattern')</th>
+                                    <th>$T('sort-result')</th>
+                                </tr>
+                            </tbody>
+                            <tbody>
+                                <tr>
+                                    <td class="align-right"><b>$T('sort-guessitMeaning'):</b></td>
+                                    <td>%GI&lt;$T('sort-guessitProperty')&gt;</td>
+                                    <td>$T('guessit-sp-property')</td>
+                                </tr>
+                                <tr>
+                                    <td class="align-right"><b></b></td>
+                                    <td>%G.I&lt;$T('sort-guessitProperty')&gt;</td>
+                                    <td>$T('guessit-dot-property')</td>
+                                </tr>
+                                <tr>
+                                    <td class="align-right"><b></b></td>
+                                    <td>%G_I&lt;$T('sort-guessitProperty')&gt;</td>
+                                    <td>$T('guessit-us-property')</td>
+                                </tr>
+                                <tr>
+                                    <td class="align-right"><b>$T('Example')</b></td>
+                                    <td>%GI&lt;audio_codec&gt;</td>
+                                    <td>DTS</td>
+                                </tr>
+                                <tr>
+                                    <td class="align-right" style="vertical-align:top;"><b>$T('Valid properties')</b></td>
+                                    <td colspan=2>
+                                        <!--#for $prop in $guessit_properties#-->
+                                        $prop<br>
+                                        <!--#end for#-->
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -369,6 +473,21 @@
                             <tbody>
                                 <tr>
                                     <td class="align-right"><b>$T('show-name'):</b></td>
+                                    <td>%sn</td>
+                                    <td>$T('show-sp-name') ($T('case-adjusted'))</td>
+                                </tr>
+                                <tr>
+                                    <td>&nbsp;</td>
+                                    <td>%s.n</td>
+                                    <td>$T('show-dot-name') ($T('case-adjusted'))</td>
+                                </tr>
+                                <tr>
+                                    <td>&nbsp;</td>
+                                    <td>%s_n</td>
+                                    <td>$T('show-us-name') ($T('case-adjusted'))</td>
+                                </tr>
+                                <tr>
+                                    <td class="align-right"><b>$T('show-name'):</b></td>
                                     <td>%t</td>
                                     <td>$T('show-sp-name')</td>
                                 </tr>
@@ -383,9 +502,24 @@
                                     <td>$T('show-us-name')</td>
                                 </tr>
                                 <tr>
+                                    <td class="align-right"><b>$T('Resolution'):</b></td>
+                                    <td>%r</td>
+                                    <td>1080p</td>
+                                </tr>
+                                <tr>
                                     <td class="align-right"><b>$T('year'):</b></td>
                                     <td>%y</td>
-                                    <td>2009</td>
+                                    <td>2021</td>
+                                </tr>
+                                <tr>
+                                    <td class="align-right"><b>$T('decade'):</b></td>
+                                    <td>%decade</td>
+                                    <td>20</td>
+                                </tr>
+                                <tr>
+                                    <td>&nbsp;</td>
+                                    <td>%0decade</td>
+                                    <td>2020</td>
                                 </tr>
                                 <tr>
                                     <td class="align-right"><b>$T('month'):</b></td>
@@ -408,19 +542,14 @@
                                     <td>02</td>
                                 </tr>
                                 <tr>
-                                    <td class="align-right"><b>$T('decade'):</b></td>
-                                    <td>%decade</td>
-                                    <td>00</td>
+                                    <td class="align-right"><b>$T('ep-name'):</b></td>
+                                    <td>%en</td>
+                                    <td>$T('ep-sp-name')</td>
                                 </tr>
                                 <tr>
                                     <td>&nbsp;</td>
-                                    <td>%0decade</td>
-                                    <td>2000</td>
-                                </tr>
-                                <tr>
-                                    <td class="align-right"><b>$T('Resolution'):</b></td>
-                                    <td>%r</td>
-                                    <td>1080p</td>
+                                    <td>%e.n</td>
+                                    <td>$T('ep-dot-name')</td>
                                 </tr>
                                 <tr>
                                     <td class="align-right"><b>$T('orgFilename'):</b></td>
@@ -436,6 +565,43 @@
                                     <td class="align-right"><b>$T('lowercase'):</b></td>
                                     <td>{$T('TEXT')}</td>
                                     <td>$T('text')</td>
+                                </tr>
+                            </tbody>
+                            <tbody>
+                                <tr>
+                                    <th class="align-right"><b>GuessIt</b></th>
+                                    <th>$T('sort-pattern')</th>
+                                    <th>$T('sort-result')</th>
+                                </tr>
+                            </tbody>
+                            <tbody>
+                                <tr>
+                                    <td class="align-right"><b>$T('sort-guessitMeaning'):</b></td>
+                                    <td>%GI&lt;$T('sort-guessitProperty')&gt;</td>
+                                    <td>$T('guessit-sp-property')</td>
+                                </tr>
+                                <tr>
+                                    <td class="align-right"><b></b></td>
+                                    <td>%G.I&lt;$T('sort-guessitProperty')&gt;</td>
+                                    <td>$T('guessit-dot-property')</td>
+                                </tr>
+                                <tr>
+                                    <td class="align-right"><b></b></td>
+                                    <td>%G_I&lt;$T('sort-guessitProperty')&gt;</td>
+                                    <td>$T('guessit-us-property')</td>
+                                </tr>
+                                <tr>
+                                    <td class="align-right"><b>$T('Example')</b></td>
+                                    <td>%GI&lt;audio_codec&gt;</td>
+                                    <td>DTS</td>
+                                </tr>
+                                <tr>
+                                    <td class="align-right" style="vertical-align:top;"><b>$T('Valid properties')</b></td>
+                                    <td colspan=2>
+                                        <!--#for $prop in $guessit_properties#-->
+                                        $prop<br>
+                                        <!--#end for#-->
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
