Add required server option

--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -104,6 +104,11 @@
                         <span class="desc">$T('srv-explain-send_group')</span>
                     </div>
                     <div class="field-pair advanced-settings">
+                        <label class="config" for="required">$T('srv-required')</label>
+                        <input type="checkbox" name="required" id="required" value="1" />
+                        <span class="desc">$T('explain-required')</span>
+                    </div>
+                    <div class="field-pair advanced-settings">
                         <label class="config" for="optional">$T('srv-optional')</label>
                         <input type="checkbox" name="optional" id="optional" value="1" />
                         <span class="desc">$T('explain-optional')</span>
@@ -224,6 +229,11 @@
                             <input type="text" name="ssl_ciphers" id="ssl_ciphers" value="$server['ssl_ciphers']" />
                             <span class="desc">$T('explain-ssl_ciphers') <br>$T('readwiki')
                             <a href="${helpuri}advanced/ssl-ciphers" target="_blank">${helpuri}advanced/ssl-ciphers</a></span>
+                        </div>
+                        <div class="field-pair advanced-settings">
+                            <label class="config" for="required$cur">$T('srv-required')</label>
+                            <input type="checkbox" name="required" id="required$cur" value="1" <!--#if int($server['required']) != 0 then 'checked="checked"' else ""#--> />
+                            <span class="desc">$T('explain-required')</span>
                         </div>
                         <div class="field-pair advanced-settings">
                             <label class="config" for="optional$cur">$T('srv-optional')</label>
