Require at least 1 category to be set for Sorting and warn if not set
Before 3.4.0, only for TV sorting we allowed to set 0 categories. But for Movies and Date Sorting we did require at least 1 category to be set. This was harmonized in 3.4.0, breaking existing setups. Added warning for those users.
The Sorting behavior is different from Notifications: in Notifications selecting Default only(!) means to apply it to all categories.
However, that has never been the case for Sorting. So for now added a bit more help texts to the Affected categories box on both pages.

--- a/interfaces/Config/templates/config_sorting.tmpl
+++ b/interfaces/Config/templates/config_sorting.tmpl
@@ -11,12 +11,13 @@
                 <h3>$T('seriesSorting') <a href="$helpuri$help_uri#toc0" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
                 <p>
                     <b>$T('affectedCat')</b><br/>
-                    <select name="tv_categories" multiple="multiple" class="multiple_cats">
+                    <select name="tv_categories" multiple="multiple" class="multiple_cats" required="required">
                         <!--#for $ct in $categories#-->
                         <option value="$ct" <!--#if $ct in $tv_categories then 'selected="selected"' else ""#--> >$Tspec($ct)</option>
                         <!--#end for#-->
                     </select>
                 </p>
+                <p>$T('selectOneCat')</p>
             </div>
             <!-- /col2 -->
             <div class="col1">
@@ -223,12 +224,13 @@
                 <h3>$T('movieSort') <a href="$helpuri$help_uri#toc6" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
                 <p>
                     <b>$T('affectedCat')</b><br/>
-                    <select name="movie_categories" multiple="multiple" class="multiple_cats">
+                    <select name="movie_categories" multiple="multiple" class="multiple_cats" required="required">
                         <!--#for $ct in $categories#-->
                         <option value="$ct" <!--#if $ct in $movie_categories then 'selected="selected"' else ""#--> >$Tspec($ct)</option>
                         <!--#end for#-->
                     </select>
                 </p>
+                <p>$T('selectOneCat')</p>
             </div>
             <!-- /col2 -->
             <div class="col1">
@@ -419,12 +421,13 @@
                 <h3>$T('dateSorting') <a href="$helpuri$help_uri#toc9" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
                 <p>
                     <b>$T('affectedCat')</b><br/>
-                    <select name="date_categories" multiple="multiple" class="multiple_cats">
+                    <select name="date_categories" multiple="multiple" class="multiple_cats" required="required">
                         <!--#for $ct in $categories#-->
                         <option value="$ct" <!--#if $ct in $date_categories then 'selected="selected"' else ""#--> >$Tspec($ct)</option>
                         <!--#end for#-->
                     </select>
                 </p>
+                <p>$T('selectOneCat')</p>
             </div>
             <!-- /col2 -->
             <div class="col1">
