--- a/interfaces/Config/templates/config_notify.tmpl
+++ b/interfaces/Config/templates/config_notify.tmpl
@@ -22,6 +22,7 @@
                 <option value="$ct" <!--#if $ct in $getVar($section_label + '_cats') then 'selected="selected"' else ""#-->>$Tspec($ct)</option>
             <!--#end for#-->
         </select>
+        <p>$T('defaultNotifiesAll')</p>
     </div>
 <!--#end def#-->
 
@@ -40,6 +41,7 @@
                         <option value="$ct" <!--#if $ct in $email_cats then 'selected="selected"' else ""#-->>$Tspec($ct)</option>
                     <!--#end for#-->
                 </select>
+                <p>$T('defaultNotifiesAll')</p>
             </div>
         </div>
         <div class="col1">
