Clean up and reduce number of new translations

--- a/interfaces/Config/templates/config_general.tmpl
+++ b/interfaces/Config/templates/config_general.tmpl
@@ -229,24 +229,20 @@
                     <span class="desc">$T('explain-proxy_enabled')</span>
                 </div>
                 <div class="field-pair advanced-settings">
-                    <label class="config" for="proxy_host">$T('opt-proxy_host')</label>
+                    <label class="config" for="proxy_host">$T('srv-host')</label>
                     <input type="text" name="proxy_host" id="proxy_host" value="$proxy_host" />
-                    <span class="desc">$T('explain-proxy_host')</span>
                 </div>
                 <div class="field-pair">
-                    <label class="config" for="proxy_port">$T('opt-proxy_port')</label>
+                    <label class="config" for="proxy_port">$T('srv-port')</label>
                     <input type="number" name="proxy_port" id="proxy_port" value="$proxy_port" size="8" />
-                    <span class="desc">$T('explain-proxy_port')</span>
                 </div>
                 <div class="field-pair advanced-settings">
-                    <label class="config" for="proxy_username">$T('opt-proxy_username')</label>
+                    <label class="config" for="proxy_username">$T('srv-username')</label>
                     <input type="text" name="proxy_username" id="proxy_username" value="$proxy_username" />
-                    <span class="desc">$T('explain-proxy_username')</span>
                 </div>
                 <div class="field-pair" advanced-settings">
-                    <label class="config" for="proxy_password">$T('opt-proxy_password')</label>
+                    <label class="config" for="proxy_password">$T('srv-password')</label>
                     <input type="text" name="proxy_password" id="proxy_password" value="$proxy_password" />
-                    <span class="desc">$T('explain-proxy_password')</span>
                 </div>
                 <div class="field-pair">
                     <button class="btn btn-default saveButton"><span class="glyphicon glyphicon-ok"></span> $T('button-saveChanges')</button>
